# auto-card-news-ver2

./: .dockerignore  .env.example  .gitignore  AGENT_HANDOFF.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  logo.html  pyproject.toml  render_logo.py
.claude/: settings.json
.claude/agents/: build-error-resolver.md  code-reviewer.md  planner.md  refactor-cleaner.md  security-reviewer.md  tdd-guide.md
.claude/commands/: build-fix.md  checkpoint.md  code-review.md  learn.md  plan.md  refactor-clean.md  tdd.md  verify.md
.claude/rules/: agents.md  coding-style.md  git-workflow.md  performance.md  security.md  testing.md
.data/: publish_history.json
.github/workflows/: generate.yml
src/auto_card_news_v2/: __init__.py  cli.py  config.py  models.py  pipeline.py  runner.py  scheduler.py
src/auto_card_news_v2/caption/: __init__.py  composer.py  engagement.py  hashtags.py
src/auto_card_news_v2/feed/: __init__.py  dedup.py  fetcher.py  history.py  parser.py  prioritizer.py  scraper.py
src/auto_card_news_v2/output/: __init__.py  packager.py
tests/: conftest.py  test_config.py  test_feed_prioritizer.py  test_pipeline.py  test_runner.py  test_scheduler.py  test_threads_client.py  test_threads_image_host.py  test_threads_publisher.py  test_threads_token_store.py
tests/caption/: test_composer.py  test_engagement.py  test_hashtags.py
tests/feed/: test_dedup.py  test_history.py  test_parser.py
tests/output/: test_packager.py
tests/render/: test_carousel.py
tests/story/: test_safety.py  test_summarizer.py
(+15 files in other folders)
